--- a/index.html
+++ b/index.html
@@ -572,10 +572,10 @@
                     </div>
                     <!--====== Guru 32 ====================-->
                     <div class="portfolio__content grid swiper-slide ">
-                        <img src="assets/img/guru/no.jpg" alt="" class="portfolio__img" >
+                        <img src="assets/img/guru/yus.jpg" alt="" class="portfolio__img" >
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Yus</h3>
-                            <p class="portfolio__description">Guru Agama</p>
+                            <h3 class="portfolio__title">Yuswatun Hasanah, S.E</h3>
+                            <p class="portfolio__description">Staff TU | Guru Agama</p>
                             <a href="#" class="button button--flex button--small portfolio__button">
                                 Profil
                                 <i class="uil uil-arrow-right button__icon"></i>
